Добавлен основной контент сайта

--- a/index.html
+++ b/index.html
@@ -26,12 +26,20 @@
       </div>
     </div>
   </header>
-  <div class="social">
-    <div class="s_text">Follow us</div>
-    <img class="insta" src="./img/insta.svg" alt="instagram">
-    <img class="twitter" src="./img/twiter.svg" alt="twitter">
-  </div>
   <main>
+    <div class="social">
+      <div class="s_text">Follow us</div>
+      <img class="insta" src="./img/insta.svg" alt="instagram">
+      <img class="twitter" src="./img/twiter.svg" alt="twitter">
+    </div>
+    <div class="slider">
+      <div class="slider_text">
+          Start <br/> 01 <br/> 02 <br/> 03
+      </div>
+      <div class="slider_picture">
+        <img src="./img/Slider.svg" alt="slider">
+      </div>
+    </div>
     <div class="content">
       <div class="group17">
         <img class ="rectangle" src="./img/Rectangle 2.1.svg" alt="rect"><span>A HIKING GUIDE </span>
@@ -44,7 +52,20 @@
         <img class="down" src="./img/arrow_downward_24px.svg" alt="arrow_down">
       </div>
     </div>
-    
+    <div class="BG_content">
+    </div>
+    <div class="content_2">
+      <div class="c_01">
+        <div class="cont_01">
+          <div class="tagline_01"></div>
+          <div class="text_01"></div>
+          <div class="more_01"></div>
+        </div>
+      </div>
+      <div class="c_02"></div>
+      <div class="c_03"></div>
+
+    </div>
 
 
   </main>
