Исправлена структура верстки (не до конца)

--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-    <div class="header">
-      <div class="h_logo">
-      <a href="#"><img class="logo" src="./img/Logo.svg" alt="logo"></a>
-      </div>
-      <div class="h_eg">
-      <a href="#" class="eguipment">Eguipment</a>
-      </div>
-      <div class="h_about">
-      <a href="#">About us</a>
-      </div>
-      <div class="h_blog">
-      <a href="#">Blog</a>
-      </div>
-      <div class="h_account">
-        <img class="cart" src="./img/cart.svg" alt="cart"><a href="#" class="acc">Account</a>
-      </div>
-    </div>
-  </header>
   <main>
-    <div class="social">
+  <div class="desktop1920">
+    <header>
+      <div class="header">
+        <div class="h_logo">
+        <a href="#"><img class="logo" src="./img/Logo.svg" alt="logo"></a>
+        </div>
+        <div class="h_eg">
+        <a href="#" class="eguipment">Eguipment</a>
+        </div>
+        <div class="h_about">
+        <a href="#">About us</a>
+        </div>
+        <div class="h_blog">
+        <a href="#">Blog</a>
+        </div>
+        <div class="h_account">
+          <img class="cart" src="./img/cart.svg" alt="cart"><a href="#" class="acc">Account</a>
+        </div>
+      </div>
+    </header>
+  <div class="content1">
+      <div class="social">
       <div class="s_text">Follow us</div>
       <img class="insta" src="./img/insta.svg" alt="instagram">
       <img class="twitter" src="./img/twiter.svg" alt="twitter">
@@ -52,23 +54,28 @@
         <img class="down" src="./img/arrow_downward_24px.svg" alt="arrow_down">
       </div>
     </div>
-    <div class="BG_content">
     </div>
-    <div class="content_2">
-      <div class="c_01">
-        <div class="cont_01">
-          <div class="tagline_01"></div>
-          <div class="text_01"></div>
-          <div class="more_01"></div>
+    <div class="BG_content">
+    </div>  
+  <div class="content_2">
+    <div class="c_01">
+      <img class="01" src="./img/01.png" alt="01">
+      <img class="eg01" src="./img/Equipment01.png" alt="eg01">
+      <div class="cont_01">
+        <div class="tagline_01"></div>
+        <div class="text_01"></div>
+        <div class="more_01"></div>
         </div>
       </div>
       <div class="c_02"></div>
       <div class="c_03"></div>
 
-    </div>
+    
 
-
+  </div>
+  </div>
   </main>
+</div>
   <footer>
 
   </footer>
