Исправлен блок с основным контентом

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
     <div class="BG_content">
     </div>
   
-  <div class="content_2">
+  <div class="content2">
     <div class="c_01">
-      <img class="01" src="./img/01.png" alt="01">
-      <img class="eg01" src="./img/Equipment01.png" alt="eg01">
+      <img class="picture_01" src="./img/01.png" alt="01">
+      <img class="eg_01" src="./img/Equipment01.png" alt="eg01">
       <div class="cont_01">
         <div class="tagline_01"></div>
         <div class="text_01"></div>
         <div class="more_01"></div>
-        </div>
-      </div>
-      <div class="c_02"></div>
-      <div class="c_03"></div>
+    </div>
+  </div>
+    <div class="c_02"></div>
+    <div class="c_03"></div>
+  </div>
 
     
 
-  </div>
   </div>
   </main>
 </div>
