Доделана верстка веб-страницы на desktop1920

--- a/index.html
+++ b/index.html
@@ -56,29 +56,103 @@
     </div>
     </div>
     <div class="BG_content">
-    </div>
-  
+    </div> 
   <div class="content2">
     <div class="c_01">
       <img class="picture_01" src="./img/01.png" alt="01">
-      <img class="eg_01" src="./img/Equipment01.png" alt="eg01">
+      <div class="eg_01">01</div>
       <div class="cont_01">
-        <div class="tagline_01"></div>
-        <div class="text_01"></div>
-        <div class="more_01"></div>
+        <div class="tagline_03">
+          <img class="tag_03" src="./img/tagline.svg" alt="tagline_03">
+          <span class="t_03">GET STARTED</span>
+        </div>
+        <div class="what_level">
+          What level of <br/> hiker are you?
+        </div>
+        <div class="determ_text">
+            Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? 
+        </div>
+        <div class="more_01">
+          <a class="t_more_01" href="#">read more</a>
+          <img class="pic_more" src="./img/right.svg" alt="right">
+        </div>
+      </div>
+    </div>
+  
+    <div class="c_01">
+      <img class="picture_02" src="./img/02.png" alt="02">
+      <div class="eg_02">02</div>
+      <div class="cont_02">
+        <div class="tagline_03">
+          <img class="tag_03" src="./img/tagline.svg" alt="tagline_03">
+          <span class="t_03">HIKING ESENTIALS</span>
+        </div>
+        <div class="picking_the">
+          Picking the right Hiking Gear!
+        </div>
+        <div class="thenice_text">
+          The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have. <br/>
+          Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.
+        </div>
+        <div class="more_01">
+          <a class="t_more_01" href="#">read more</a>
+          <img class="pic_more" src="./img/right.svg" alt="right">
+        </div>
+      </div>
+    </div>
+    <div class="c_01">
+    <img class="picture_03" src="./img/03.png" alt="03">
+    <div class="eg_03">03</div>
+    <div class="cont_01">
+      <div class="tagline_03">
+        <img class="tag_03" src="./img/tagline.svg" alt="tagline_03">
+        <span class="t_03">WHERE YOU DO IS THE KEY</span>
+      </div>
+      <div class="understand">
+        Understand Your Map & Timing
+      </div>
+      <div class="to_start">
+        To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction..
+      </div>
+      <div class="more_01">
+        <a class="t_more_01" href="#">read more</a>
+          <img class="pic_more" src="./img/right.svg" alt="right">
+      </div>
     </div>
   </div>
-    <div class="c_02"></div>
-    <div class="c_03"></div>
-  </div>
+  <footer>
+    <div class="footer">
+      <span class="cop">Copyright 2019 MNTN, Inc. Terms & Privacy</span>
+      <div class="f_text">Get out there & discover your next slope, mountain & destination!
+      </div>
+      <div class="f_logo"><span class="f_t_logo">MNTN</span>
+      </div>
+      <div class="link">
+        <ul>
+          <li><a class="link_1" href="#">More on The Blog</a></li>
+          <li><a class="link_2" href="#">About MNTN</a></li>
+          <li><a class="link_2" href="#">Contributors & Writers</a></li>
+          <li><a class="link_2" href="#">Write For Us</a></li>
+          <li><a class="link_2" href="#">Contact Us</a></li>
+          <li><a class="link_2" href="#">Privacy Policy</a></li>
+        </ul>
 
-    
+      </div>
+      <div class="link2">
+        <ul>
+          <li><a class="link_1" href="#">More on MNTN </a></li>
+          <li><a class="link_2" href="#">The Team</a></li>
+          <li><a class="link_2" href="#">Jobs</a></li>
+          <li><a class="link_2" href="#">Press</a></li>
+        </ul>
+      </div>
+      </div>
+  </footer>
+  </div>
+  </div>
 
   </div>
   </main>
 </div>
-  <footer>
-
-  </footer>
 </body>
 </html>
