Попытка сделать адаптивность, изменена структура веб-страницы

--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
   <main>
   <div class="desktop1920">
     <header>
-      <div class="header">
-        <div class="h_logo">
+      <nav class="header">
         <a href="#"><img class="logo" src="./img/Logo.svg" alt="logo"></a>
+        <div class="nav_menu">
+        <a href="#" class="header_btn">Eguipment</a>
+        <a href="#" class="header_btn">About us</a>
+        <a href="#" class="header_btn">Blog</a>
         </div>
-        <div class="h_eg">
-        <a href="#" class="eguipment">Eguipment</a>
-        </div>
-        <div class="h_about">
-        <a href="#">About us</a>
-        </div>
-        <div class="h_blog">
-        <a href="#">Blog</a>
-        </div>
-        <div class="h_account">
-          <img class="cart" src="./img/cart.svg" alt="cart"><a href="#" class="acc">Account</a>
-        </div>
-      </div>
-    </header>
-  <div class="content1">
+        <a href="#" class="acc header_btn"><img class="cart" src="./img/cart.svg" alt="cart">Account</a>
+      </nav>
       <div class="social">
       <div class="s_text">Follow us</div>
       <img class="insta" src="./img/insta.svg" alt="instagram">
@@ -54,7 +44,7 @@
         <img class="down" src="./img/arrow_downward_24px.svg" alt="arrow_down">
       </div>
     </div>
-    </div>
+  </header>
     <div class="BG_content">
     </div> 
   <div class="content2">
