Сделана адаптивность для 1024px

--- a/index.html
+++ b/index.html
@@ -19,18 +19,12 @@
         </div>
         <a href="#" class="acc header_btn"><img class="cart" src="./img/cart.svg" alt="cart">Account</a>
       </nav>
+
+      <div class="scs">
       <div class="social">
       <div class="s_text">Follow us</div>
       <img class="insta" src="./img/insta.svg" alt="instagram">
       <img class="twitter" src="./img/twiter.svg" alt="twitter">
-    </div>
-    <div class="slider">
-      <div class="slider_text">
-          Start <br/> 01 <br/> 02 <br/> 03
-      </div>
-      <div class="slider_picture">
-        <img src="./img/Slider.svg" alt="slider">
-      </div>
     </div>
     <div class="content">
       <div class="group17">
@@ -44,13 +38,22 @@
         <img class="down" src="./img/arrow_downward_24px.svg" alt="arrow_down">
       </div>
     </div>
-  </header>
+    <div class="slider">
+      <div class="slider_text">
+          Start <br/> 01 <br/> 02 <br/> 03
+      </div>
+      <div class="slider_picture">
+        <img src="./img/Slider.svg" alt="slider">
+      </div>
+    </div>
+      </div>
+
     <div class="BG_content">
     </div> 
+  </header>
   <div class="content2">
     <div class="c_01">
-      <img class="picture_01" src="./img/01.png" alt="01">
-      <div class="eg_01">01</div>
+      <div class="eg_01">01</div>   
       <div class="cont_01">
         <div class="tagline_03">
           <img class="tag_03" src="./img/tagline.svg" alt="tagline_03">
@@ -67,10 +70,11 @@
           <img class="pic_more" src="./img/right.svg" alt="right">
         </div>
       </div>
+      <img class="picture_01" src="./img/01.png" alt="01">
     </div>
   
     <div class="c_01">
-      <img class="picture_02" src="./img/02.png" alt="02">
+      
       <div class="eg_02">02</div>
       <div class="cont_02">
         <div class="tagline_03">
@@ -89,10 +93,11 @@
           <img class="pic_more" src="./img/right.svg" alt="right">
         </div>
       </div>
+      <img class="picture_02" src="./img/02.png" alt="02">
     </div>
     <div class="c_01">
-    <img class="picture_03" src="./img/03.png" alt="03">
-    <div class="eg_03">03</div>
+    
+    <div class="eg_01">03</div>
     <div class="cont_01">
       <div class="tagline_03">
         <img class="tag_03" src="./img/tagline.svg" alt="tagline_03">
@@ -109,13 +114,16 @@
           <img class="pic_more" src="./img/right.svg" alt="right">
       </div>
     </div>
+    <img class="picture_01" src="./img/03.png" alt="03">
   </div>
   <footer>
     <div class="footer">
-      <span class="cop">Copyright 2019 MNTN, Inc. Terms & Privacy</span>
+      <div class="f_div">
+      <div class="f_logo"><span class="f_t_logo">MNTN</span>
       <div class="f_text">Get out there & discover your next slope, mountain & destination!
       </div>
-      <div class="f_logo"><span class="f_t_logo">MNTN</span>
+      <span class="cop">Copyright 2019 MNTN, Inc. Terms & Privacy</span>
+      </div>
       </div>
       <div class="link">
         <ul>
